--- a/app.html
+++ b/app.html
@@ -2,37 +2,58 @@
 <head>
   <title>Flux Example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="bundle.js"></script>
 </head>
 <body>
 
-<h1>Address Book</h1>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          Address Book &mdash; A Flux Example
+        </a>
+      </div>
+    </div>
+  </nav>
 
-<h2>People</h2>
-<ul class="people">
-  <li class="person vcard">
-    <span class="n">
-      <span class="given-name">Alice</span>
-      <span class="family-name">Smith</span>
-    </span>
-  </li>
-</ul>
+  <div class="container">
+    <div class="row">
 
-<h2>Editor</h2>
-<form class="editor">
-  <div>
-    <label for="given-name">Given Name</label>
-    <input type="text" name="given-name">
+      <div class="col-sm-6">
+        <h4>Contacts</h4>
+        <ul class="people list-group">
+          <li class="person vcard list-group-item">
+            <span class="n">
+              <span class="given-name">Alice</span>
+              <span class="family-name">Smith</span>
+            </span>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-sm-6">
+        <h4>Editor</h4>
+        <form class="editor">
+          <div class="form-group">
+            <label for="given-name">Given Name</label>
+            <input type="text" name="given-name" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="family-name">Family Name</label>
+            <input type="text" name="family-name" class="form-control">
+          </div>
+          <div>
+            <input type="reset" value="Reset" class="btn btn-default">
+            <input type="submit" value="Save" class="btn btn-primary">
+          </div>
+        </form>
+      </div>
+
+    </div>
   </div>
-  <div>
-    <label for="family-name">Family Name</label>
-    <input type="text" name="family-name">
-  </div>
-  <div>
-    <input type="reset" value="Reset">
-    <input type="submit" value="Save">
-  </div>
-</form>
 
 </body>
 </html>
