--- a/app.html
+++ b/app.html
@@ -24,14 +24,14 @@
 
       <div class="col-sm-6">
         <h4>Contacts</h4>
-        <ul class="people list-group">
-          <li class="person vcard list-group-item">
+        <div class="people list-group">
+          <a class="person vcard list-group-item" href="#person-id">
             <span class="n">
               <span class="given-name">Alice</span>
               <span class="family-name">Smith</span>
             </span>
-          </li>
-        </ul>
+          </a>
+        </div>
       </div>
 
       <div class="col-sm-6">
