--- a/app.html
+++ b/app.html
@@ -38,6 +38,10 @@
         <h4>Editor</h4>
         <form class="editor">
           <div class="form-group">
+            <label for="id">ID</label>
+            <input type="text" name="id" class="form-control">
+          </div>
+          <div class="form-group">
             <label for="given-name">Given Name</label>
             <input type="text" name="given-name" class="form-control">
           </div>
@@ -46,8 +50,9 @@
             <input type="text" name="family-name" class="form-control">
           </div>
           <div>
-            <input type="reset" value="Reset" class="btn btn-default">
-            <input type="submit" value="Save" class="btn btn-primary">
+            <input type="reset" value="Reset" class="btn btn-default" data-action="reset">
+            <input type="submit" value="Save" class="btn btn-primary" data-action="save">
+            <input type="button" value="Remove" class="btn btn-danger" data-action="remove">
           </div>
         </form>
       </div>
