--- a/app.html
+++ b/app.html
@@ -25,7 +25,7 @@
       <div class="col-sm-6">
         <h4>Contacts</h4>
         <div class="people list-group">
-          <a class="person vcard list-group-item" href="#person-id">
+          <a class="person vcard list-group-item" href="#person-id" data-action="show">
             <span class="n">
               <span class="given-name">Alice</span>
               <span class="family-name">Smith</span>
